<resources>
    <string name="app_name">IIIT Kalyani</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Fest</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_cale">Academic Calender</string>
    <string name="menu_cgpa">CGPA Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="More">More</string>
    <string name="Name">Name</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="TimeTable">Time Table</string>
    <string name="AcademicCalendar">Academic Calendar</string>
    <string name="todo">TODO</string>
    <string name="menu_messages">Chat</string>
    <string name="menu_person">Users</string>
</resources>
