<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_above="@+id/post_image"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="@string/Name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_image"
            android:layout_marginTop="10dp"
            android:text="@string/Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic"
            android:theme="@style/AppTheme" />

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_title"
            android:layout_marginTop="10dp"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>